--- a/css/style.css
+++ b/css/style.css
@@ -1326,20 +1326,20 @@ body {
   }
 }
 @media (min-width:20em) and (max-width:90em) {
-  @supports (margin-bottom:clamp(2.5rem ,1.3214285714rem + 5.8928571429vw ,6.625rem)) {
+  @supports (margin-bottom:clamp(1.25rem ,-0.2857142857rem + 7.6785714286vw ,6.625rem)) {
     .services__title {
-      margin-bottom: clamp(2.5rem ,1.3214285714rem + 5.8928571429vw ,6.625rem)
+      margin-bottom: clamp(1.25rem ,-.2857142857rem + 7.6785714286vw ,6.625rem)
     }
   }
-  @supports not (margin-bottom:clamp(2.5rem ,1.3214285714rem + 5.8928571429vw ,6.625rem)) {
+  @supports not (margin-bottom:clamp(1.25rem ,-0.2857142857rem + 7.6785714286vw ,6.625rem)) {
     .services__title {
-      margin-bottom: calc(2.5rem + 4.125 * (100vw - 20rem)/ 70)
+      margin-bottom: calc(1.25rem + 5.375 * (100vw - 20rem)/ 70)
     }
   }
 }
 @media (max-width:20em) {
   .services__title {
-    margin-bottom: 2.5rem
+    margin-bottom: 1.25rem
   }
 }
 .services__body {
@@ -1354,6 +1354,11 @@ body {
   gap: 1.25rem;
   align-items: flex-start
 }
+@media (max-width:41.24875em) {
+  .services__items {
+    margin-bottom: 1.25rem
+  }
+}
 .services__item:nth-child(2) {
   padding-top: 9.0625rem
 }
@@ -1361,11 +1366,12 @@ body {
   padding-top: 5.4375rem
 }
 .item-service {
+  flex-basis: 11.875rem;
+  flex-shrink: 1;
+  flex-grow: 0;
   position: relative
 }
 .item-service__link {
-  display: grid;
-  gap: 2rem;
   position: relative;
   z-index: 2
 }
@@ -1382,7 +1388,11 @@ body {
   transition: -webkit-transform .3s;
   transition: transform .3s;
   transition: transform .3s,-webkit-transform .3s;
-  max-width: 11.875rem
+  width: 100%
+}
+.item-service__name {
+  position: relative;
+  z-index: 3
 }
 .item-service__title:not(:last-child) {
   margin-bottom: 2rem
@@ -1416,14 +1426,43 @@ body {
 }
 .content-services {
   position: relative;
-  z-index: 5;
-  right: 50%;
-  text-align: right;
-  max-width: 20rem;
-  justify-self: end;
-  -webkit-transform: translate(-2.6875rem,-6.5rem);
-  transform: translate(-2.6875rem,-6.5rem)
+  z-index: 5
 }
-.content-services__title:not(:last-child) {
-  margin-bottom: 2rem
+@media (min-width:em(660)) {
+  .content-services {
+    -webkit-transform: translate(-2.6875rem,-6.5rem);
+    transform: translate(-2.6875rem,-6.5rem);
+    max-width: 20rem;
+    right: 50%;
+    text-align: right;
+    justify-self: end
+  }
+}
+@media (max-width:41.24875em) {
+  .content-services {
+    text-align: center;
+    justify-self: center
+  }
+}
+@media (min-width:90em) {
+  .content-services__title:not(:last-child) {
+    margin-bottom: 2rem
+  }
+}
+@media (min-width:20em) and (max-width:90em) {
+  @supports (margin-bottom:clamp(0.9375rem ,0.6339285714rem + 1.5178571429vw ,2rem)) {
+    .content-services__title:not(:last-child) {
+      margin-bottom: clamp(.9375rem ,.6339285714rem + 1.5178571429vw ,2rem)
+    }
+  }
+  @supports not (margin-bottom:clamp(0.9375rem ,0.6339285714rem + 1.5178571429vw ,2rem)) {
+    .content-services__title:not(:last-child) {
+      margin-bottom: calc(.9375rem + 1.0625 * (100vw - 20rem)/ 70)
+    }
+  }
+}
+@media (max-width:20em) {
+  .content-services__title:not(:last-child) {
+    margin-bottom: .9375rem
+  }
 }
