--- a/css/style.css
+++ b/css/style.css
@@ -580,6 +580,129 @@ body {
     color: #f95454
   }
 }
+@media (min-width:90em) {
+  .footer {
+    padding-top: 6.25rem
+  }
+}
+@media (min-width:20em) and (max-width:90em) {
+  @supports (padding-top:clamp(2.5rem ,1.4285714286rem + 5.3571428571vw ,6.25rem)) {
+    .footer {
+      padding-top: clamp(2.5rem ,1.4285714286rem + 5.3571428571vw ,6.25rem)
+    }
+  }
+  @supports not (padding-top:clamp(2.5rem ,1.4285714286rem + 5.3571428571vw ,6.25rem)) {
+    .footer {
+      padding-top: calc(2.5rem + 3.75 * (100vw - 20rem)/ 70)
+    }
+  }
+}
+@media (max-width:20em) {
+  .footer {
+    padding-top: 2.5rem
+  }
+}
+@media (min-width:90em) {
+  .footer {
+    padding-bottom: 6.25rem
+  }
+}
+@media (min-width:20em) and (max-width:90em) {
+  @supports (padding-bottom:clamp(2.5rem ,1.4285714286rem + 5.3571428571vw ,6.25rem)) {
+    .footer {
+      padding-bottom: clamp(2.5rem ,1.4285714286rem + 5.3571428571vw ,6.25rem)
+    }
+  }
+  @supports not (padding-bottom:clamp(2.5rem ,1.4285714286rem + 5.3571428571vw ,6.25rem)) {
+    .footer {
+      padding-bottom: calc(2.5rem + 3.75 * (100vw - 20rem)/ 70)
+    }
+  }
+}
+@media (max-width:20em) {
+  .footer {
+    padding-bottom: 2.5rem
+  }
+}
+.footer__content {
+  display: flex;
+  justify-content: space-between;
+  gap: 2.5rem;
+  align-items: flex-start;
+  max-width: 77.5rem;
+  margin: 0 auto
+}
+@media (max-width:53.75em) {
+  .footer__content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center
+  }
+}
+.menu-footer {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(2,1fr);
+  grid-auto-flow: column;
+  row-gap: 2.5rem
+}
+@media (min-width:90em) {
+  .menu-footer {
+    -webkit-column-gap: 4.6875rem;
+    -moz-column-gap: 4.6875rem;
+    column-gap: 4.6875rem
+  }
+}
+@media (min-width:20em) and (max-width:90em) {
+  @supports ((-moz-column-gap:clamp(0.625rem ,-0.5357142857rem + 5.8035714286vw ,4.6875rem)) or (column-gap:clamp(0.625rem ,-0.5357142857rem + 5.8035714286vw ,4.6875rem))) {
+    .menu-footer {
+      -webkit-column-gap: clamp(.625rem ,-.5357142857rem + 5.8035714286vw ,4.6875rem);
+      -moz-column-gap: clamp(.625rem ,-.5357142857rem + 5.8035714286vw ,4.6875rem);
+      column-gap: clamp(.625rem ,-.5357142857rem + 5.8035714286vw ,4.6875rem)
+    }
+  }
+  @supports not ((-moz-column-gap:clamp(0.625rem ,-0.5357142857rem + 5.8035714286vw ,4.6875rem)) or (column-gap:clamp(0.625rem ,-0.5357142857rem + 5.8035714286vw ,4.6875rem))) {
+    .menu-footer {
+      -webkit-column-gap: calc(.625rem + 4.0625 * (100vw - 20rem)/ 70);
+      -moz-column-gap: calc(.625rem + 4.0625 * (100vw - 20rem)/ 70);
+      column-gap: calc(.625rem + 4.0625 * (100vw - 20rem)/ 70)
+    }
+  }
+}
+@media (max-width:20em) {
+  .menu-footer {
+    -webkit-column-gap: .625rem;
+    -moz-column-gap: .625rem;
+    column-gap: .625rem
+  }
+}
+.menu-footer__link {
+  font-weight: 500;
+  color: #fff
+}
+@media (any-hover:hover) {
+  .menu-footer__link:hover {
+    text-decoration: underline
+  }
+}
+@media (min-width:53.74875em) {
+  .invite {
+    text-align: right
+  }
+}
+.invite__title:not(:last-child) {
+  margin-bottom: 1.375rem
+}
+.invite__link {
+  color: #f95454;
+  font-size: 1.875rem;
+  text-decoration: underline
+}
+@media (any-hover:hover) {
+  .invite__link:hover {
+    text-decoration: none
+  }
+}
 .hero {
   padding-top: 4.0625rem;
   padding-bottom: 4.0625rem;
@@ -1523,12 +1646,13 @@ body {
 .passion__content {
   text-align: center;
   position: relative;
-  z-index: 2;
-  flex-basis: 40.625rem
+  z-index: 2
+}
+.passion__title:not(:last-child) {
+  margin-bottom: .9375rem
 }
 .passion__text {
   color: #fff;
-  max-width: 28.125rem;
   display: inline-block
 }
 .passion__important-item {
@@ -1538,7 +1662,8 @@ body {
   -ms-writing-mode: tb-lr;
   writing-mode: vertical-lr;
   -webkit-transform: translate(0,-50%);
-  transform: translate(0,-50%)
+  transform: translate(0,-50%);
+  z-index: 2
 }
 @media (min-width:90em) {
   .passion__important-item {
@@ -1647,17 +1772,24 @@ body {
   max-width: 54.375rem;
   margin: 0 auto
 }
+@media (max-width:37.49875em) {
+  .best__content {
+    flex-direction: column
+  }
+}
 .best__item {
+  flex-shrink: 0;
   position: relative;
   z-index: 2
 }
-.best__item:nth-child(1) {
-  align-self: flex-end
+@media (min-width:37.5em) {
+  .best__item:nth-child(1) {
+    align-self: flex-end
+  }
 }
 .best__item:nth-child(2) {
   flex-grow: 1;
-  z-index: 1;
-  margin: 0 -3.125rem
+  z-index: 1
 }
 @media (min-width:90em) {
   .best__item:nth-child(2) {
@@ -1701,6 +1833,16 @@ body {
 @media (max-width:20em) {
   .best__item:nth-child(2) {
     margin-bottom: 1.25rem
+  }
+}
+@media (min-width:37.5em) {
+  .best__item:nth-child(2) {
+    margin: 0 -5.375rem 0 -3.125rem
+  }
+}
+@media (max-width:37.49875em) {
+  .best__item {
+    text-align: center
   }
 }
 .item-best__image {
@@ -1754,7 +1896,7 @@ body {
   height: 100%
 }
 .item-best__body {
-  max-width: 18.75rem
+  max-width: 17.5rem
 }
 @media (min-width:90em) {
   .item-best__body {
@@ -1762,42 +1904,47 @@ body {
   }
 }
 @media (min-width:20em) and (max-width:90em) {
-  @supports (padding-top:clamp(1.25rem ,-0.1785714286rem + 7.1428571429vw ,6.25rem)) {
+  @supports (padding-top:clamp(3.125rem ,2.2321428571rem + 4.4642857143vw ,6.25rem)) {
     .item-best__body {
-      padding-top: clamp(1.25rem ,-.1785714286rem + 7.1428571429vw ,6.25rem)
+      padding-top: clamp(3.125rem ,2.2321428571rem + 4.4642857143vw ,6.25rem)
     }
   }
-  @supports not (padding-top:clamp(1.25rem ,-0.1785714286rem + 7.1428571429vw ,6.25rem)) {
+  @supports not (padding-top:clamp(3.125rem ,2.2321428571rem + 4.4642857143vw ,6.25rem)) {
     .item-best__body {
-      padding-top: calc(1.25rem + 5 * (100vw - 20rem)/ 70)
+      padding-top: calc(3.125rem + 3.125 * (100vw - 20rem)/ 70)
     }
   }
 }
 @media (max-width:20em) {
   .item-best__body {
-    padding-top: 1.25rem
+    padding-top: 3.125rem
   }
 }
 @media (min-width:90em) {
   .item-best__body {
-    margin-left: 1.375rem
+    margin-left: 1.25rem
   }
 }
 @media (min-width:20em) and (max-width:90em) {
-  @supports (margin-left:clamp(0.0000000625rem ,-0.3928570625rem + 1.964285625vw ,1.375rem)) {
+  @supports (margin-left:clamp(0.0000000625rem ,-0.3571427768rem + 1.7857141964vw ,1.25rem)) {
     .item-best__body {
-      margin-left: clamp(.0000000625rem ,-.3928570625rem + 1.964285625vw ,1.375rem)
+      margin-left: clamp(.0000000625rem ,-.3571427768rem + 1.7857141964vw ,1.25rem)
     }
   }
-  @supports not (margin-left:clamp(0.0000000625rem ,-0.3928570625rem + 1.964285625vw ,1.375rem)) {
+  @supports not (margin-left:clamp(0.0000000625rem ,-0.3571427768rem + 1.7857141964vw ,1.25rem)) {
     .item-best__body {
-      margin-left: calc(.0000000625rem + 1.3749999375 * (100vw - 20rem)/ 70)
+      margin-left: calc(.0000000625rem + 1.2499999375 * (100vw - 20rem)/ 70)
     }
   }
 }
 @media (max-width:20em) {
   .item-best__body {
     margin-left: .0000000625rem
+  }
+}
+@media (max-width:37.49875em) {
+  .item-best__body {
+    display: inline-block
   }
 }
 @media (min-width:90em) {
